fixed image collapsed issue

--- a/frontend/src/component/Product/ProductDetails.css
+++ b/frontend/src/component/Product/ProductDetails.css
@@ -9,7 +9,7 @@
   
   .ProductDetails > div {
     width: 100%;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
@@ -23,7 +23,9 @@
   }
   
   .CarouselImage {
-    width: 20vmax;
+    width: 20vmax; /* Adjust the width to make the images wider */
+    display: block;
+    margin: 0 auto;
   }
   
   .detailsBlock-1 > h2 {
